--- a/templates/admin/layout.html
+++ b/templates/admin/layout.html
@@ -110,6 +110,7 @@
                         <ul>
                             <li><a href=""class='btn disabled'>Adicionar evento</a></li>
                             <li><a href=""class='btn disabled'>Retirar evento</a></li>
+                            <li><a href=""class='btn disabled'>Editar evento</a></li>
                         </ul>
                     </li>
                 </ul>
