--- a/templates/admin/add_staff.html
+++ b/templates/admin/add_staff.html
@@ -1,10 +1,5 @@
 {% extends "admin/layout.html" %}
 
-{% block content %}
-
-<header>
-    <h2>Equipe</h2>
-</header>
 
 {% block scripts %}
 <script type="text/javascript">
@@ -22,50 +17,49 @@ $(document).ready(function() {
             $("label[for='photo']").css('visibility','visible');
         }
     });
+
 });
 </script>
 {% endblock %}
+{% block content %}
+<div class="container">
+<div class="row">
+<div class="col-xs-6" style="margin-left: -5%">
+<header style="margin-top: 6.5%">
+    <h2>Equipe</h2>
+</header>
 
 {% if success_msg %}
     <div class="form-success">
         <p>{{ success_msg }}</p>
     </div>
 {% endif %}
-<div class="form">
+
 <form method="POST" action="{{ url_for('admin.add_staff') }}">
+    <div class="form-group">
     {{ form.csrf_token }}
-    
     <br/>
-    
     {{ form.name.label }}<br/>
-    {{ form.name(required='true') }}
-
+    {{ form.name(required='true', class="form-control") }}
     <br/>
-    
     {{ form.abstract.label }}<br/>
-    {{ form.abstract(required='true', minlength='50', maxlength='1200', placeholder='ex:Possui graduação em Psicologia pela Universidade Federal do Rio Grande do Norte (1993) e mestrado em Administração (1999) e doutorado em Psicologia (2012) também pela UFRN. De 2009 a 2013 foi professor adjunto da Universidade Federal de Alagoas (UFAL), no curso de Psicologia. A partir de dezembro de 2013, passou a ser professor adjunto do Departamento de Ciências Administrativas da Universidade Federal do Rio Grande do Norte. Na Psicologia atua na área da Psicologia do Trabalho e das Organizações, com ênfase em Fatores Humanos no Trabalho. Na Administração atua na área de Gestão de Pessoas. Desde 2014 é docente permanente do Programa de Pós-Graduação em Gestão Pública, UFRN ') }}
-
+    {{ form.abstract(required='true', class="form-control", minlength='50', maxlength='1200', placeholder='ex:Possui graduação em Psicologia pela Universidade Federal do Rio Grande do Norte (1993) e mestrado em Administração (1999) e doutorado em Psicologia (2012) também pela UFRN. De 2009 a 2013 foi professor adjunto da Universidade Federal de Alagoas (UFAL), no curso de Psicologia. A partir de dezembro de 2013, passou a ser professor adjunto do Departamento de Ciências Administrativas da Universidade Federal do Rio Grande do Norte. Na Psicologia atua na área da Psicologia do Trabalho e das Organizações, com ênfase em Fatores Humanos no Trabalho. Na Administração atua na área de Gestão de Pessoas. Desde 2014 é docente permanente do Programa de Pós-Graduação em Gestão Pública, UFRN ') }}
     <br/>
-
     {{ form.rank.label }}<br/>
-    {{ form.rank(required='true') }}
-
+    {{ form.rank(required='true', class="form-control") }}
     <br/>
-
     {{ form.function.label }}<br/>
-    {{ form.function(required='true') }}
-
-    <br/>
+    {{ form.function(required='true', class="form-control") }}
     <br/>
     {{ form.photo.label}}<br/>
-    {{ form.photo }}
-    <br/>
-    <br/>
-    
-    {{ form.create }}
-    
+    {{ form.photo(class="form-control")}}
+    </br>
+    {{ form.create(class="form-control")}}
+    </div>    
 </form>
-    <br/>
+<br/>
+</div>
+</div>
 </div>
 
 <p>
