--- a/templates/admin/subjects.html
+++ b/templates/admin/subjects.html
@@ -2,7 +2,10 @@
 
 {% block content %}
 
-<header>
+<div class="container">
+<div class="row">
+<div class="col-xs-6" style="margin-left: -5%">
+<header style="margin-top : 6.5%">
     <h2>Disciplinas</h2>
 </header>
 
@@ -11,42 +14,46 @@
         <p>{{ success_msg }}</p>
     </div>
 {% endif %}
-<div class="form">
+
 <form method="POST" action="{{ url_for('admin.subjects') }}">
+    <div class="form-group">
     {{ form.csrf_token }}
     
     <br/>
     
     {{ form.name.label }}<br/>
-    {{ form.name(required='true') }}
+    {{ form.name(required='true', class="form-control") }}
 
     <br/>
     
     {{ form.description.label }}<br/>
-    {{ form.description(required='true', minlength='100', maxlength='1200', placeholder='ex: Compreensão dos campos da política, das políticas públicas e da administração pública; O Contexto decisório da Administração Pública; O Contexto organizacional da Administração Pública; O Contexto normativo da Administração Pública; Teoria das Organizações e Administração Pública; Novos paradigmas da gestão pública.') }}
+    {{ form.description(required='true' , class="form-control", minlength='100', maxlength='1200', placeholder='ex: Compreensão dos campos da política, das políticas públicas e da administração pública; O Contexto decisório da Administração Pública; O Contexto organizacional da Administração Pública; O Contexto normativo da Administração Pública; Teoria das Organizações e Administração Pública; Novos paradigmas da gestão pública.') }}
 
     <br/>
 
     {{ form.workload_in_hours.label }}<br/>
-    {{ form.workload_in_hours(required='true', type='number', step='1', min='1', max='300', placeholder='ex: 30') }}
+    {{ form.workload_in_hours(required='true', class="form-control", type='number', step='1', min='1', max='300', placeholder='ex: 30') }}
 
     <br/>
 
     {{ form.credits.label }}<br/>
-    {{ form.credits(required='true', type='number', step='1', placeholder='ex:4') }}    
+    {{ form.credits(required='true', type='number', step='1', placeholder='ex:4', class="form-control") }}    
 
     <br/>
 
     {{ form.requirement.label }}<br/>
-    {{ form.requirement(required='true') }}
+    {{ form.requirement(required='true', class="form-control") }}
 
     <br/>
     <br/>
     
-    {{ form.create }}
+    {{ form.create(class="form-control")}}
+    </div>
     
 </form>
-    <br/>
+<br/>
+</div>
+</div>
 </div>
 
 <p>
