--- a/templates/public/layout.html
+++ b/templates/public/layout.html
@@ -102,9 +102,19 @@
                             </li>
                         </ul>
                     </li>
-
-                    <li><a href="{{ url_for('public.view_documents', initials=std.post_graduation.initials) }}">
+                    <li class="dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         <span class="glyphicon glyphicon-file"></span> Documentos</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{{ url_for('public.view_documents_regiments', initials=std.post_graduation.initials) }}">
+                                <span class="glyphicon glyphicon-file"></span> Regimentos</a>
+                            </li>
+                            <li><a href="{{ url_for('public.view_documents_atas', initials=std.post_graduation.initials) }}">
+                                <span class="glyphicon glyphicon-file"></span> ATAs</a>
+                            </li>
+                            <li><a href="{{ url_for('public.view_documents_others', initials=std.post_graduation.initials) }}">
+                                <span class="glyphicon glyphicon-file"></span> Outros</a>
+                            </li>
+                        </ul>
                     </li>
 
                 </ul>
