--- a/templates/admin/layout.html
+++ b/templates/admin/layout.html
@@ -108,7 +108,7 @@
                     </li>
                     <li><a href="">Calendário</a>
                         <ul>
-                            <li><a href=""class='btn disabled'>Adicionar evento</a></li>
+                            <li><a href="{{ url_for('admin.add_events') }}">Adicionar evento</a></li>
                             <li><a href=""class='btn disabled'>Retirar evento</a></li>
                             <li><a href=""class='btn disabled'>Editar evento</a></li>
                         </ul>
