--- a/templates/admin/edit_participations.html
+++ b/templates/admin/edit_participations.html
@@ -42,38 +42,40 @@ $(document).ready(function() {
 {% endblock %}
 
 {% block content %}
-<section>
-    <header class="page-header">
-        <h2>Intercâmbio</h2>
-    </header>
-    <h4>Selecione o intercâmbio</h4>
-    <select id="list"></select>
-    <button id="edit" type="button">Selecionar</button>
-    <div id="form-div">
-    <form method="POST" id="form-edit" action="{{ url_for('admin.edit_participations') }}">
-        {{ form.csrf_token }}
-        {{ form.index(required='true', style="display:none;", readonly="readonly") }}
-        <br/>
-        {{ form.title.label(class="label-edit") }}
-        <br/>
-        {{ form.title(required='true', class="edit-input") }}
-        <br/>
-        {{ form.description.label(class="label-edit") }}
-        <br/>
-        {{ form.description(required='true', class="edit-input") }}
-        <br/>
-        {{ form.year.label(class="label-edit") }}
-        <br/>
-        {{ form.year(required='true', type='number', step='1', min='1970', max='2050', placeholder='ex: 2017', class="edit-input") }}
-        <br/>
-        {{ form.location.label(class="label-edit") }}
-        <br/>
-        {{ form.location(required='true', class="edit-input") }}
-        <br/>
+<div class="container">
+<div class="row">
+<div class="col-xs-12" style="margin-left: -5%">
+<header class="page-header">
+    <h2>Intercâmbio</h2>
+</header>
+<h4>Selecione o intercâmbio</h4>
+<select id="list"></select>
+<button id="edit" type="button" class="btn btn-default">Selecionar</button>
+</div>
+<div class="col-xs-10" style="margin-left: -5%">
+<form method="POST" id="form-edit" action="{{ url_for('admin.edit_participations') }}">
+    <div class="form-group">
+    {{ form.csrf_token }}
+    {{ form.index(required='true', style="display:none;", readonly="readonly") }}
+    <br/>
+    {{ form.title.label }}
+    {{ form.title(required='true', class="form-control") }}
+    <br/>
+    {{ form.description.label }}
+    {{ form.description(required='true', class="form-control") }}
+    <br/>
+    {{ form.year.label }}
+    {{ form.year(required='true', type='number', step='1', min='1970', max='2050', placeholder='ex: 2017', class="form-control") }}
+    <br/>
+    {{ form.location.label }}
+    {{ form.location(required='true', class="form-control") }}
+    <br/>
 
-        {{ form.create }}
-    </form>
+    {{ form.create(class="form-control") }}
     </div>
-</section>
-
+</form>
+</div>
+</div>
+</div>
+</div>
 {% endblock %}
