Mudanças de aparância, começo do crud de convênio e editar/deletar eventos
Mudanças bestas em quase todos os cruds em relação a css, criação do formulário de editar convênio, diferente dos outros, na minha concepção esse precisa ser um formulário separado, uma vez que o FileField no editar vai ser opcional e no adicionar é obrigatório, também foi adicionado o editar e deletar de eventos, que é semelhante aos outros editar deletar

--- a/static/posgraduacao/css/general_admin.css
+++ b/static/posgraduacao/css/general_admin.css
@@ -195,10 +195,9 @@ li:hover ul {
 }
 
 .delete-input {
+      box-shadow: none;
       border: 0;
-      outline: 0;
-      background: transparent;
-      width: 50%
+      background-color: transparent;
 }
 
 textarea.edit-input,
