--- a/templates/admin/add_staff.html
+++ b/templates/admin/add_staff.html
@@ -53,6 +53,9 @@ $(document).ready(function() {
     <br/>
     {{ form.photo.label}}<br/>
     {{ form.photo(class="form-control")}}
+    <p class="form-text text-muted">
+        Procure a imagem na internet, aperte o botão direito do mouse, selecione 'Copiar endereço de imagem' ou semelhante, e cole o resultado aqui
+    </p>
     </br>
     {{ form.create(class="form-control")}}
     </div>    
