--- a/templates/admin/delete_staff.html
+++ b/templates/admin/delete_staff.html
@@ -46,6 +46,8 @@ $(document).ready(function() {
             $("textarea[name=abstract]").val(staff.coordination[indexInStaff].abstract);
             $("input[name=rank]").val(staff.coordination[indexInStaff].rank);
             $("input[name=photo]").val(staff.coordination[indexInStaff].photo);
+            $(".col-md-3").css("display", "block");
+            $(".img-circle").css("display", "block");
             $(".img-circle").attr("src", staff.coordination[indexInStaff].photo);
             $("select[name=function]").val(functionStaff);
         } else {
@@ -63,6 +65,7 @@ $(document).ready(function() {
         if($(this).val() == 'secretariat'){
             $("input[name=photo]").css('visibility','hidden');
             $("label[for='photo']").css('visibility','hidden');
+            $(".col-md-3").css("display", "none");
             $(".img-circle").css("display", "none");
             $(".img-circle").attr("src", "")
             $("#list").html("");
@@ -73,6 +76,7 @@ $(document).ready(function() {
         if($(this).val() == 'coordination'){
             $("input[name=photo]").css('visibility','visible');
             $("label[for='photo']").css('visibility','visible');
+            $(".col-md-3").css("display", "block");
             $(".img-circle").css("display", "block");
             $("#list").html("");
             $("#list").select2({
@@ -85,50 +89,52 @@ $(document).ready(function() {
 {% endblock %}
 
 {% block content %}
-
-<header>
+<div class="container">
+<div class="row">
+<div class="col-xs-12" style="margin-left: -5%">
+<header class="page-header">
     <h2>Equipe</h2>
 </header>
 <h4>Selecione o servidor</h4>
-    <select id="list"></select>
-    <select id="functionStaff">
-        <option value="coordination" selected="selected">Coordenação</option>
-        <option value="secretariat">Secretária</option>
-    </select>
-    <button id="edit" type="button">Selecionar</button>
-    <div class="form-div">
-    <form method="POST" id='form-edit' action="{{ url_for('admin.delete_staff') }}">
-        {{ form.csrf_token }}
-        {{ form.index(required='true', style="display:none;", readonly="readonly") }}
-        <br/>
-        {{ form.name.label (class="label-edit")}}<br/>
-        {{ form.name(required='true', class="delete-input", readonly="readonly") }}
-        <br/>
-        
-        {{ form.abstract.label (class="label-edit")}}<br/>
-        {{ form.abstract(required='true', minlength='50', maxlength='1200', class="delete-input", readonly="readonly") }}
-        <br/>
-
-        {{ form.rank.label(class="label-edit") }}<br/>
-        {{ form.rank(required='true', class="delete-input", readonly="readonly") }}
-
-        <br/>
-
-        {{ form.function.label(style="display: none") }}<br/>
-        {{ form.function(required='true', style="display: none", class="delete-input") }}
-        <br/>
-        {{ form.photo.label(class="label-edit")}}<br/>
-        {{ form.photo(class="delete-input") }}
-        <br/>
-        <br/>
-    
-        {{ form.create }}
-    
-    </form>
-    
+<select id="list"></select>
+<select id="functionStaff" type="select" class="btn btn-default">
+    <option value="coordination" selected="selected">Coordenação</option>
+    <option value="secretariat">Secretária</option>
+</select>
+<button id="edit"type="button" class="btn btn-default">Selecionar</button>
+</div>
+<div class="col-xs-6" style="margin-left: -5%">
+<form method="POST" id='form-edit' action="{{ url_for('admin.edit_staff') }}">
+    <div class="form-group">
+    <fieldset disabled>
+    {{ form.csrf_token }}
+    {{ form.index(required='true', style="display:none;" ) }}
+    <br/>
+    {{ form.name.label }}
+    {{ form.name(required='true', class="form-control", readonly="readonly") }}
+    <br/>
+    {{ form.abstract.label }}
+    {{ form.abstract(required='true', minlength='50', maxlength='1200', class="form-control", readonly="readonly") }}
+    <br/>
+    {{ form.rank.label }}
+    {{ form.rank(required='true', class="form-control", readonly="readonly") }}
+    <br/>
+    {{ form.function.label(style="display: none") }}
+    {{ form.function(required='true', style="display: none", class="form-control", readonly="readonly") }}
+    {{ form.photo.label}}
+    {{ form.photo(class="form-control", readonly="readonly") }}
+    <br/>
+    </fieldset>
+    {{ form.create(class="form-control")}}
     </div>
-    <div class="col-md-3" style="float: right; margin-right: 20%">
-        <img src="" class="img-circle pull-right" height="190" width="180">
-    </div>
+</form>
+</div>
+<div class="col-md-3" style="margin-top: 3%; display:block">
+    <img src="" class="img-circle pull-right" height="280" width="240" style="display:none">
+</div>
+
+</div>
+</div>
+</div>
 
 {% endblock %}
