Mudanças no html em algumas páginas, começo de uma requisição de professora arlete, criados os testes para adicionar/deletar agendamentos e calendários
Alguns htmls estavam com <fieldset disabled> que embora fique com uma aparência perfeita, não permite o post das informações no formulário(eu achei que só mudava a aparência e acabei não testando), a professora arlete também requisitou a criação de uma aba com livros/artigos publicados pelo centro, o que fiz até agora foi adicionar uns exemplos de livros e artigos(mudanças feitas em standard_installation) criar views para possibilitar o acesso a essas informações(views/public.py e models/factory.py) e os templates necessários, as mudanças em admin.py não foram nada demais só coisa que eu fiz na hora de montar os testes, a maior parte é só linha em branco a mais, lembrar de verificar a questão do pep8 depois

--- a/templates/public/layout.html
+++ b/templates/public/layout.html
@@ -79,9 +79,19 @@
                                 <span class="glyphicon glyphicon-folder-open"></span> Teses</a>
                             </li>
                             {% endif %}
-                            
+
                             <li><a href="#">
                                 <span class="glyphicon glyphicon-briefcase"></span> Egressos (em breve)</a>
+                            </li>
+
+                            <li role="separator" class="divider"></li>
+                            <li class="dropdown-header">Publicações</li>
+
+                            <li><a href="{{ url_for('public.view_books', initials=std.post_graduation.initials) }}">
+                                    <span class="glyphicon glyphicon-book"></span> Livros</a>
+                            </li>
+                            <li><a href="{{ url_for('public.view_articles', initials=std.post_graduation.initials) }}">
+                                    <span class="glyphicon glyphicon-book"></span> Artigos</a>
                             </li>
                         </ul>
                     </li>
