Ajustes pequenos em artigos/livros;aparencia do botão de upload e crud completo de convênios
No artigos/books botei pra não aparecer os deletados, mudei a aparencia do botão de upload pra ficar condizente com os botões do bootstrap e fiz o views/templates de editar e deletar convênios, importante notar que o formulário de editar e deletar não é o mesmo de adicionar(os outros cruds é) já que não dá pra carregar o arquivo no json e nem faria sentido fazer isso

--- a/templates/admin/documents.html
+++ b/templates/admin/documents.html
@@ -25,8 +25,11 @@
     {{ form.category(required='true', class="form-control") }}
     <br/>
 
-    {{ form.document.label }}<br/>
-    {{ form.document(required='true') }}
+    <label class="btn btn-default">
+        <span>Carregar documento</span>
+        {{ form.document(required='true', style="display:none") }}
+    </label>
+    <br/>
     <br/>
 
     {{ form.create(class="form-control")}}
