--- a/templates/admin/covenants.html
+++ b/templates/admin/covenants.html
@@ -1,30 +1,40 @@
 {% extends "admin/layout.html" %}
 
 {% block content %}
-
-<header>
+<div class="container">
+<div class="row">
+<div class="col-xs-6" style="margin-left: -5%">
+<header style="margin-top: 6.5%">
     <h2>Convênios</h2>
 </header>
 
 <form method="POST" action="{{ url_for('admin.covenants') }}" enctype="multipart/form-data">
+    <div class="form-group">
     {{ form.csrf_token }}
     
     {{ form.name.label }}<br/>
-    {{ form.name(required='true', placeholder='ex: Universidade Federal do Rio de Janeiro') }}
+    {{ form.name(required='true', placeholder='ex: Universidade Federal do Rio de Janeiro', class="form-control") }}
     
     <br/>
 
     {{ form.initials.label }}<br/>
-    {{ form.initials(required='true', placeholder='ex: UFRJ') }}
+    {{ form.initials(required='true', placeholder='ex: UFRJ', class="form-control") }}
 
     <br/>
 
-    {{ form.logo.label }}<br/>
-    {{ form.logo }}
+    <label class="btn btn-default">
+        <span>Carregar documento</span>
+        {{ form.logo(style="display:none") }}
+    </label>
 
     <br/>
-
-    {{ form.create }}
+    <br/>
+    
+    {{ form.create(class="form-control") }}
+    </div>
 </form>
+</div>
+</div>
+</div>
 
 {% endblock %}
