Mais testes e crud de documentos
Os novos unittest são os envolvendo adicionar e deletar disciplinas, além disso foram adicionados views/templates para fazer edição e deleção de arquivos, importante notar que assim como o editar/deletar de convênio, o de documento também usa um form separado, cuja diferença é a de ter o campo que vai receber o objectId do documento, e o fato do campo de upload não ser obrigatório, as mudanças no standard_installation envolvem adicionar o campo de categoria aos documentos exemplo, isso se deve a uma requisição de professora arlete de que os documentos devem ser divididos por cateogira(atas/outros/regimentos etc) eu acabei fazendo todo o código para receber isso(templates separados para cada categoria e adicionar o campo categoria no formulário de adicionar) mas esqueci de mudar os exemplos

--- a/templates/admin/layout.html
+++ b/templates/admin/layout.html
@@ -120,7 +120,8 @@
                 <li><a href="">Documentos</a>
                     <ul>
                     <li><a href="{{ url_for('admin.documents') }}">Adicionar documentos</a></li>
-                    <li><a href=""class='btn disabled'>Retirar documentos</a></li>
+                    <li><a href="{{ url_for('admin.edit_documents') }}">Editar documentos</a></li>
+                    <li><a href="{{ url_for('admin.delete_documents') }}">Retirar documentos</a></li>
                     </ul>
                 </li>
                 </ul>
